--- a/Lab4/Gemfile
+++ b/Lab4/Gemfile
@@ -30,6 +30,10 @@ gem 'therubyracer'
 
 gem 'sqlite3'
 
+gem 'will_paginate', '~> 3.0.6'
+
+gem 'devise'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
