--- a/Lab3/Gemfile
+++ b/Lab3/Gemfile
@@ -29,6 +29,8 @@ gem 'therubyracer'
 
 gem 'will_paginate', '~> 3.0.6'
 
+gem 'factory_girl_rails', '~> 4.0'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
@@ -41,6 +43,8 @@ gem 'will_paginate', '~> 3.0.6'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rspec'
+  gem 'rspec-rails', '~> 3.0'
 end
 
 group :development do
